# deep-learning-by-doing-camp

./: .gitignore  404.html  LICENSE  README.md  environment.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt
coding/: index.html
configs/: gcn_cora.yaml  mlp_mnist.yaml  temporal_gnn_toy.yaml
deep-learning/roadmap/: index.html
docs/: index.md
docs/coding/: index.md
docs/deep-learning/: roadmap.md
docs/logs/: plan.md  week0.md
docs/math/linear-algebra/: week0-linear-algebra.md
logs/plan/: index.html
logs/week0/: index.html
math/linear-algebra/week0-linear-algebra/: index.html
notebooks/: 00_linear_algebra_review.ipynb  01_probability_review.ipynb  02_pytorch_basics.ipynb
scripts/: train_gcn.py  train_mlp.py  train_temporal_gnn.py  week0_matrix_multiplication.py
search/: search_index.json
src/dlbydoing/: __init__.py
src/dlbydoing/models/: __init__.py
src/dlbydoing/visualization/: __init__.py
tests/: test_gcn_forward.py  test_tensor_shapes.py
